; ModuleID = '/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5500/extr_w5500.c_wiz_send_data.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5500/extr_w5500.c_wiz_send_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiz_send_data(i32 %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  store i32 0, i32* %8, align 4
  %9 = load i64, i64* %6, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %32

12:                                               ; preds = %3
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @getSn_TX_WR(i32 %13)
  store i64 %14, i64* %7, align 8
  %15 = load i64, i64* %7, align 8
  %16 = trunc i64 %15 to i32
  %17 = shl i32 %16, 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @WIZCHIP_TXBUF_BLOCK(i32 %18)
  %20 = shl i32 %19, 3
  %21 = add nsw i32 %17, %20
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @WIZCHIP_WRITE_BUF(i32 %22, i32* %23, i64 %24)
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = add nsw i64 %27, %26
  store i64 %28, i64* %7, align 8
  %29 = load i32, i32* %4, align 4
  %30 = load i64, i64* %7, align 8
  %31 = call i32 @setSn_TX_WR(i32 %29, i64 %30)
  br label %32

32:                                               ; preds = %12, %11
  ret void
}

declare dso_local i64 @getSn_TX_WR(i32) #1

declare dso_local i32 @WIZCHIP_TXBUF_BLOCK(i32) #1

declare dso_local i32 @WIZCHIP_WRITE_BUF(i32, i32*, i64) #1

declare dso_local i32 @setSn_TX_WR(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
